--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 spring.application.name=springboot-book-store
 
 #Config Port
-server.port=8080
+server.port=8081
 
 # Connect Database with MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/bookstore
 spring.datasource.username=root
 spring.datasource.password=12345
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Config Spring Security
+spring.security.user.name=user
+spring.security.user.password=12345
 
 # Expose health and info endpoints
 management.endpoints.web.exposure.include=health,info,metrics,trace
