--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,6 @@ spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# Config Spring Security
-spring.security.user.name=user
-spring.security.user.password=12345
-
 # Expose health and info endpoints
 management.endpoints.web.exposure.include=health,info,metrics,trace
+logging.level.root=INFO
